--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
-        "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "laravel-mix": "^6.0.49"
     }
 }
