--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
-        "laravel-mix": "^6.0.49"
+        "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2"
     }
 }
