--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "laravel-mix": "^6.0.49",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2"
+    },
+    "dependencies": {
+        "daisyui": "^2.51.6"
     }
 }
