--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "tailwindcss": "^3.3.2"
     },
     "dependencies": {
+        "alpinejs": "^3.12.0",
         "daisyui": "^2.51.6",
         "theme-change": "^2.5.0"
     }
