--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "browser-sync": "^2.29.1",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.49",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2"
